--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               WebService-Viglink
-version:            0.03
+version:            0.04
 abstract:           Interface to the Viglink web API
 author:
     - Fred Moyer <fred@slwifi.com>
@@ -11,7 +11,8 @@ configure_requires:
 build_requires:
     ExtUtils::MakeMaker:  0
 requires:
-    URI::Escape:  0
+    HTML::Entities:  0
+    URI::Escape:     0
 no_index:
     directory:
         - t
